syntax = "proto3";

package fdb;

service FdbService {
    rpc Transaction(stream OperationRequest) returns (stream OperationResponse);
}

message OperationRequest {
    oneof operation {
        CommitRequest commit = 1;
        GetRequest get = 2;
        GetRangeRequest get_range = 3;
        SetRequest set = 4;
        ClearRequest clear = 5;
    }
}

message OperationResponse {
    oneof operation {
        CommitResponse commit = 1;
        GetResponse get = 2;
        GetRangeResponse get_range = 3;
        SetResponse set = 4;
        ClearResponse clear = 5;
    }
}

message ValueType {
    enum Builtin {
        Unknown = 0;

        Empty = 10;

        String = 20;
        
        Int32 = 30;
        Int64 = 31;

        Float32 = 40;
        Float64 = 41;
    }

    message Protobuf {
        string type_name = 1;
    }

    oneof type {
        Builtin builtin = 1;
        Protobuf protobuf = 2;
    }
}

message CommitRequest {
}
message CommitResponse {
}

message GetRequest {
    string key = 1;
    ValueType value_type = 2;
}
message GetResponse {
    bytes value = 1;
}

message GetRangeRequest {
    string start_key = 1;
    string end_key = 2;
    ValueType value_type = 3;
}
message GetRangeResponse {
    message Pair {
        string key = 1;
        bytes value = 2;
    }

    repeated Pair pairs = 1;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}
message SetResponse {
}

message ClearRequest {
    string key = 1;
}
message ClearResponse {
}